test/loop/confidence/errors/verify_error_2.loop
# Scope resolution error for function call

main ->
  scan([100, scal(),3])
  where
    scan(ls) =>
      []                    : []
      [x]       | sc() < 10    : [x]
                | x > 10    : [10]
      [x:xs]                : sclan(xs) + x
